src/FinancialForce Accounting/objects/codaCurrencyRevaluationSummary__c.object
<CustomObject>
    <description>Currency revaluation line detail at first level.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyRevaluation__c</fullName>
        <label>Currency Revaluation</label>
        <referenceTo>codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>CurrencyRevaluationSummaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <label>Dual Value</label>
        <summarizedField>codaCurrencyRevaluationLineItem__c.DualValue__c</summarizedField>
        <summaryForeignKey>codaCurrencyRevaluationLineItem__c.CurrencyRevaluationSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HashCode__c</fullName>
        <formula>StandardAnalysisHashCode__c &amp; SubAnalysisHashCode1__c &amp; SubAnalysisHashCode2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HashCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <label>Home Value</label>
        <summarizedField>codaCurrencyRevaluationLineItem__c.HomeValue__c</summarizedField>
        <summaryForeignKey>codaCurrencyRevaluationLineItem__c.CurrencyRevaluationSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardAnalysisHashCode__c</fullName>
        <description>Identifies a unique combination of the Standard Analysis fields used in this revaluation.</description>
        <label>Standard Analysis Hash Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubAnalysisHashCode1__c</fullName>
        <description>First half of the identifier for a unique combination of the Sub-Analysis fields used in this revaluation.</description>
        <label>Sub-Analysis Hash Code 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubAnalysisHashCode2__c</fullName>
        <description>Second half of the identifier for a unique combination of the Sub-Analysis fields used in this revaluation.</description>
        <label>Sub-Analysis Hash Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries (Tax Code 2)</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Currency Revaluation Summaries (Tax Code 3)</relationshipLabel>
        <relationshipName>Currency_Revaluation_Summaries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Summary</label>
    <nameField>
        <displayFormat>CRS{000000}</displayFormat>
        <label>Currency Revaluation Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>